samples/_failures_safe/1761448780_192b9a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20fb4d0d.c: In function ‘tokenize’:
./samples/SAFE/__tmp_20fb4d0d.c:179:9: error: expected expression at end of input
  179 |         } else
      |         ^
./samples/SAFE/__tmp_20fb4d0d.c:179:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_20fb4d0d.c:179:9: error: expected declaration or statement at end of input
